# polyfem

./: .gitignore  CMakeLists.txt  OperatorSplitting.json  data.csv  draw.py  run.json  run.py  sim.pvd  tmp.json  tunnel.json
cmake/recipes/: ipc_toolkit.cmake
src/: State.cpp  State.hpp
src/assembler/: NavierStokes.cpp  RhsAssembler.hpp
src/assembler/utils/: AssemblerUtils.cpp  AssemblerUtils.hpp
src/polyfem/: State.hpp
src/polyfem/autogen/: auto_p_bases.cpp  auto_q_bases.cpp
src/polyfem/solver/: CMakeLists.txt  LBFGSSolver.hpp  Optimizations.cpp  Optimizations.hpp  TopologyOptimizationProblem.cpp  TopologyOptimizationProblem.hpp
src/problem/: Problem.cpp  Problem.hpp  StokesProblem.cpp  StokesProblem.hpp
src/quadrature/: AdamsBashforth.cpp  AdamsBashforth.hpp  AdamsMoulton.cpp  AdamsMoulton.hpp  BDF.cpp  BDF.hpp  CMakeLists.txt
src/solver/: NavierStokesSolver.cpp  NavierStokesSolver.hpp  OperatorSplittingSolver.cpp  OperatorSplittingSolver.hpp  TransientNavierStokesSolver.cpp  TransientNavierStokesSolver.hpp
src/state/: StateOutput.cpp  StateSolve.cpp
